# voice-sentiment-analyzer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  composites.yaml  docker-compose.yml  fly.toml  modal_app.py  pyproject.toml
.claude/: settings.local.json
deprecated/: README.md  sentiment-analysis.md
docs/: ROADMAP.md
src/vsa/: __init__.py  api.py  audio.py  auth.py  cli.py  composites.py  pipeline.py  preprocess.py  schema.py  windowed.py
src/vsa/extraction/: __init__.py  llm.py  prompt.py  schema.py  types.py
src/vsa/features/: __init__.py  acoustic.py  emotion.py  prosody.py
src/vsa/transcription/: __init__.py  base.py  parakeet.py  whisper.py
tests/: conftest.py  test_acoustic.py  test_api.py  test_audio_fetcher.py  test_auth.py  test_cli.py  test_composites.py  test_emotion.py  test_extraction_gguf_resolution.py  test_extraction_prompt.py  test_extraction_schema.py  test_pipeline.py  test_preprocess.py  test_prosody.py  test_transcription.py  test_whisper.py  test_windowed.py
