[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-sentiment-analyzer"
version = "0.1.0"
description = "Open-source voice sentiment analysis service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "httpx>=0.27",
    "numpy>=1.24",
    "scipy>=1.11",
    "praat-parselmouth>=0.4",
    "librosa>=0.10",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.20",
    "anyio>=4.0",
]

[project.scripts]
vsa = "vsa.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
