[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-note-transcription"
version = "0.2.0"
description = "Local voice-note transcription service (Parakeet) with planned LLM-based extraction"
requires-python = ">=3.11"
# Runtime deps for v0.2 (transcription-only). Sentiment-era deps removed:
#   * praat-parselmouth, librosa -- acoustic feature extraction
#   * transformers, speechbrain  -- wav2vec2 emotion models
#   * pyyaml                     -- composites.yaml loading
# scipy stays as a transitive requirement of NeMo / numpy ops we still use.
# The LLM extraction layer adds llama-cpp-python in the next phase.
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "httpx>=0.27",
    "numpy>=1.24",
    "scipy>=1.11",
    "typer>=0.12",
    "nemo_toolkit[asr]>=2.0",
    "faster-whisper>=1.0",
    # Local LLM runtime for structured extraction. CPU-only by default;
    # the build wheel ships pre-compiled for x86_64 Linux and macOS.
    "llama-cpp-python>=0.2.90",
    # Used for the lazy-download path that pulls the Qwen3.5-9B GGUF
    # on first request (Parakeet is baked into the Docker image,
    # Qwen is not — see Dockerfile + extraction/llm.py for the
    # rationale). Already a transitive dep of NeMo / faster-whisper,
    # pinned explicitly here so the contract stays stable.
    "huggingface-hub>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.20",
    "anyio>=4.0",
]

[project.scripts]
# The importable package name stays ``vsa`` so existing imports keep
# working. The distribution name (above) is the only thing that follows
# the repo rename for now.
vsa = "vsa.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
